[package]
name = "empire"
version = "1.0.1"
authors = ["Pepeye <gaofolaju@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"

juniper = "0.11.1"

futures = "0.1.25"
chrono = "0.4"
uuid = { version = "0.7.2", features = ["v4"] }
env_logger = "0.6.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "0.11.13"